-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.1
-
None
-
Environment Variable: QT_WIN_DEBUG_CONSOLE=attach
-
-
cef270265 (dev), 1ec258dfb (6.8), 639437cf3 (6.7), dfa52e3ae (dev), 21cca5bb9 (6.8), 9afaccc78 (6.7)
If you set the environment variable QT_WIN_DEBUG_CONSOLE=attach this breaks qt_generate_deploy_app_script on Windows. The call to windeployqt fails with:
-- Running Qt deploy tool for C:/tt/develop/src/build/Release/bin/App.exe in working directory 'C:/tt/develop/src/build/install' 'C:/tt/develop/usr/bin/windeployqt.exe' 'C:/tt/develop/src/build/Release/bin/App.exe' '--dir' '.' '--libdir' 'bin' '--plugindir' 'plugins' '--qml-deploy-dir' 'qml' '--translationdir' 'translations' '--force' '--no-translations' '--qtpaths' 'C:/tt/develop/usr/bin/qtpaths.exe' QT_SYSROOT: QT_INSTALL_PREFIX:C:/tt/develop/usr QT_INSTALL_ARCHDATA:C:/tt/develop/usr QT_INSTALL_DATA:C:/tt/develop/usr QT_INSTALL_DOCS:C:/tt/develop/usr/doc QT_INSTALL_HEADERS:C:/tt/develop/usr/include QT_INSTALL_LIBS:C:/tt/develop/usr/lib QT_INSTALL_LIBEXECS:C:/tt/develop/usr/bin QT_INSTALL_BINS:C:/tt/develop/usr/bin QT_INSTALL_TESTS:C:/tt/develop/usr/tests QT_INSTALL_PLUGINS:C:/tt/develop/usr/plugins QT_INSTALL_QML:C:/tt/develop/usr/qml QT_INSTALL_TRANSLATIONS:C:/tt/develop/usr/translations QT_INSTALL_CONFIGURATION: QT_INSTALL_EXAMPLES:C:/tt/develop/usr/examples QT_INSTALL_DEMOS:C:/tt/develop/usr/examples QT_HOST_PREFIX:C:/tt/develop/usr QT_HOST_DATA:C:/tt/develop/usr QT_HOST_BINS:C:/tt/develop/usr/bin QT_HOST_LIBEXECS:C:/tt/develop/usr/bin QT_HOST_LIBS:C:/tt/develop/usr/lib QMAKE_SPEC:win32-msvc QMAKE_XSPEC:win32-msvc QMAKE_VERSION:3.1 QT_VERSION:6.7.1 Warning: Unable to read \mkspecs\qconfig.pri: The system cannot find the path specified. Unable to query qtpaths: CMake Error at C:/tt/develop/usr/lib/cmake/Qt6Core/Qt6CoreDeploySupport.cmake:533 (message): Executing C:/tt/develop/usr/bin/windeployqt.exe failed: 1 Call Stack (most recent call first): .qt/deploy_App_2a41dbfb28.cmake:5 (qt6_deploy_runtime_dependencies) Common/Core/prj/App/cmake_install.cmake:40 (include) Common/cmake_install.cmake:142 (include) cmake_install.cmake:41 (include)
Without the environment variable QT_WIN_DEBUG_CONSOLE set it runs fine.
I dindn't test QT_WIN_DEBUG_CONSOLE=new.
Also with QT_WIN_DEBUG_CONSOLE=attach I get a moc help output during generation time. It will certainly appear otherwise, but will not be displayed. However, it shows that other build tools also react to this environment variable.